2008-10-21  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix possible segfaults in handle_pdu(), where we 
      don't access the resp PDU structure correctly in the case of shutdown
      phase.

2008-10-10  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add HTTP admin 'reload-lists' section.
    * gw/bb_[http|smssconn].c, gw/bearerbox.h: implement HTTP admin command 
      'reload-lists' to allow re-loading of the '[white|black]-list' on the fly 
      while runtime. This helps a lot while the remote lists change over time 
      and we want to keep bearerbox running and don't have to restart in order 
      to re-load the lists.
      
2008-10-09  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: some typo fixes, using 'aspell check -H'.

2008-10-07 Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c: commited patch that allow longer account parameter and
      clarify error message.
      Thanks to Vincent CHAVANIS <v.chavanis_at_telemaque.fr> for this patch.
      [Msg-ID: <48E35531.90603@telemaque.fr>]

2008-09-30 Alexander Malysh <amalysh at kannel.org>
    * contrib/kannel-monitor/index.php: applied patch that adds inbound/
      outbound load and version info.
      Thanks to Vincent CHAVANIS <v.chavanis_at_telemaque.fr> for this patch.
      [Msg-ID: <48DA51D6.9010209@telemaque.fr>]

2008-09-21 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c, gw/bearerbox.c, gw/load.c, gw/load.h:
      added simple bandwidth meter with heuristic and needed changes to 
      bearerbox status. Bearerbox status show now 3 speeds: 1 minute sample, 
      5 minute sample, and over livetime. Example:
      SMS: inbound (0.00,0.00,0.00) msg/sec, outbound (0.00,0.00,0.00) msg/sec

2008-09-16  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add reference to the below binfo support
      of SMPP DLRs.
    * gw/smsc/smsc_smpp.c: add 'binfo' support for SMPP DLRs, in order to proxy